[package]
name = "fibre"
version = "0.1.0"
edition = "2021"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/fibre"

[dependencies]
async-component = "0.8.0"
async-component-winit = "0.8.0"

taffy = "0.2.1"
futures-channel = "0.3.25"
rustc-hash = "1.1.0"

winit = "0.27.5"
glutin = "0.30.2"
raw-window-handle = "0.5.0"
gl = "0.14.0"
skia-safe = { version = "0", features = ["gl"] }
